--- a/app/webroot/css/styles.css
+++ b/app/webroot/css/styles.css
@@ -255,10 +255,18 @@ p {
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'swenson';
+  src: url("fonts/swenson/swenson.eot");
+  src: url("fonts/swenson/swenson.eot?#iefix") format("embedded-opentype"), url("fonts/swenson/swenson.woff") format("woff"), url("fonts/swenson/swenson.ttf") format("truetype"), url("fonts/swenson/swenson.svg#SwensonRegular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* ---------------------------------------
 				Container
 ------------------------------------------ */
-/* line 210, styles.scss */
+/* line 219, styles.scss */
 .wrap {
   display: block;
   width: 995px;
@@ -268,7 +276,7 @@ p {
 /* ---------------------------------------
 				Header
 ------------------------------------------ */
-/* line 219, styles.scss */
+/* line 228, styles.scss */
 header h1 {
   position: relative;
   display: inline-block;
@@ -281,14 +289,14 @@ header h1 {
 /* ---------------------------------------
 				Nav
 ------------------------------------------ */
-/* line 231, styles.scss */
+/* line 240, styles.scss */
 nav#menu {
   display: inline-block;
   vertical-align: top;
   margin: 70px 0 0 5px;
 }
 
-/* line 236, styles.scss */
+/* line 245, styles.scss */
 nav#menu ul#nav_menu {
   position: absolute;
   text-align: left;
@@ -297,14 +305,14 @@ nav#menu ul#nav_menu {
   width: 710px;
 }
 
-/* line 243, styles.scss */
+/* line 252, styles.scss */
 nav#menu ul#nav_menu li {
   padding: 0;
   margin: 0;
   display: inline;
 }
 
-/* line 248, styles.scss */
+/* line 257, styles.scss */
 nav#menu ul#nav_menu li a {
   text-shadow: 2px 2px 3px #333;
   -moz-transition: color 0.25s;
@@ -328,7 +336,7 @@ nav#menu ul#nav_menu li a {
   font-family: 'leckerli';
 }
 
-/* line 270, styles.scss */
+/* line 279, styles.scss */
 nav#menu ul#nav_menu li a:hover {
   text-shadow: 3px 6px 4px #777;
   color: #842490;
@@ -341,7 +349,7 @@ nav#menu ul#nav_menu li a:hover {
 /* ---------------------------------------
 				Contenu
 ------------------------------------------ */
-/* line 282, styles.scss */
+/* line 291, styles.scss */
 #contenu {
   width: 990px;
   background-color: #eee;
@@ -355,7 +363,7 @@ nav#menu ul#nav_menu li a:hover {
   box-shadow: 2px 4px 15px #222222;
 }
 
-/* line 287, styles.scss */
+/* line 296, styles.scss */
 .bg {
   background: #555555 url(images/bg-contenu.jpg) 270px 0 no-repeat;
   width: 990px;
@@ -366,7 +374,7 @@ nav#menu ul#nav_menu li a:hover {
   border-radius: 15px 15px 0px 0px / 15px 15px 0px 0px;
 }
 
-/* line 292, styles.scss */
+/* line 301, styles.scss */
 .bg p {
   color: white;
   line-height: 18px;
@@ -374,7 +382,7 @@ nav#menu ul#nav_menu li a:hover {
 }
 
 /* --	Bandeau contenu -- */
-/* line 299, styles.scss */
+/* line 308, styles.scss */
 #bandeau {
   border-top: 1px dashed #999;
   width: 990px;
@@ -383,7 +391,7 @@ nav#menu ul#nav_menu li a:hover {
   display: block;
 }
 
-/* line 306, styles.scss */
+/* line 315, styles.scss */
 #bandeau ul {
   display: inline-block;
   vertical-align: top;
@@ -392,18 +400,18 @@ nav#menu ul#nav_menu li a:hover {
   padding-left: 10px;
 }
 
-/* line 313, styles.scss */
+/* line 322, styles.scss */
 #bandeau ul.horaires {
   text-align: right;
 }
 
-/* line 314, styles.scss */
+/* line 323, styles.scss */
 #bandeau li.titre {
   font-weight: bold;
   font-size: 1.4em;
 }
 
-/* line 318, styles.scss */
+/* line 327, styles.scss */
 #bandeau img {
   display: inline-block;
   vertical-align: top;
@@ -411,13 +419,13 @@ nav#menu ul#nav_menu li a:hover {
 }
 
 /* --  Bloc et blocs -- */
-/* line 325, styles.scss */
+/* line 334, styles.scss */
 .bloc {
   display: inline-block;
   padding: 30px 0;
 }
 
-/* line 329, styles.scss */
+/* line 338, styles.scss */
 .bloc p {
   width: 500px;
   text-align: justify;
@@ -426,13 +434,13 @@ nav#menu ul#nav_menu li a:hover {
   vertical-align: top;
 }
 
-/* line 336, styles.scss */
+/* line 345, styles.scss */
 .blocs {
   padding: 20px;
 }
 
 /* -- Image accessoires -- */
-/* line 340, styles.scss */
+/* line 349, styles.scss */
 aside#image-accessoires {
   display: inline-block;
   vertical-align: top;
@@ -441,7 +449,7 @@ aside#image-accessoires {
   left: 20px;
 }
 
-/* line 347, styles.scss */
+/* line 356, styles.scss */
 aside#image-accessoires img {
   width: 313px;
   height: 282px;
@@ -450,13 +458,13 @@ aside#image-accessoires img {
 /* ---------------------------------------
 				catalogue
 ------------------------------------------ */
-/* line 355, styles.scss */
+/* line 364, styles.scss */
 .produit {
   display: inline-block;
   vertical-align: top;
 }
 
-/* line 357, styles.scss */
+/* line 366, styles.scss */
 .catalogue {
   position: relative;
   display: inline-block;
@@ -464,7 +472,7 @@ aside#image-accessoires img {
   margin: 0 auto;
 }
 
-/* line 363, styles.scss */
+/* line 372, styles.scss */
 .catalogue h1.titre_produit {
   display: block;
   vertical-align: top;
@@ -473,7 +481,7 @@ aside#image-accessoires img {
   padding: 10px 0 20px 30px;
 }
 
-/* line 370, styles.scss */
+/* line 379, styles.scss */
 .catalogue figure {
   position: relative;
   display: inline-block;
@@ -481,25 +489,25 @@ aside#image-accessoires img {
   margin: 0;
 }
 
-/* line 376, styles.scss */
+/* line 385, styles.scss */
 .catalogue figure img {
   border: 1px solid white;
   padding: 3px;
   margin: 10px;
 }
 
-/* line 381, styles.scss */
+/* line 390, styles.scss */
 .catalogue nav {
   margin-left: 15px;
 }
 
-/* line 383, styles.scss */
+/* line 392, styles.scss */
 .catalogue nav figure:hover figcaption {
   color: #AA4673;
   text-decoration: underline;
 }
 
-/* line 387, styles.scss */
+/* line 396, styles.scss */
 .catalogue figcaption {
   background-color: #fff;
   color: black;
@@ -509,7 +517,7 @@ aside#image-accessoires img {
   bottom: 14px;
 }
 
-/* line 395, styles.scss */
+/* line 404, styles.scss */
 .catalogue img {
   display: block;
   margin: 10px 0;
@@ -524,19 +532,19 @@ aside#image-accessoires img {
   box-shadow: 1px 1px 14px #555555;
 }
 
-/* line 401, styles.scss */
+/* line 410, styles.scss */
 .catalogue img:hover {
   opacity: 0.8;
   -moz-opacity: 0.8;
   filter: alpha(opacity=8);
 }
 
-/* line 406, styles.scss */
+/* line 415, styles.scss */
 .produit_metas {
   margin-left: 10px;
 }
 
-/* line 407, styles.scss */
+/* line 416, styles.scss */
 .produit_metas span.prix {
   font-size: 1.2em;
   font-weight: bold;
@@ -545,13 +553,13 @@ aside#image-accessoires img {
   display: inline-block;
 }
 
-/* line 408, styles.scss */
+/* line 417, styles.scss */
 .produit_metas p {
   line-height: 12px;
   text-align: center;
 }
 
-/* line 410, styles.scss */
+/* line 419, styles.scss */
 #catalogue_accessoire {
   width: 950px;
   margin-top: 30px;
@@ -559,23 +567,23 @@ aside#image-accessoires img {
 }
 
 /* -- blocs catalogue -- */
-/* line 413, styles.scss */
+/* line 422, styles.scss */
 .blocs h1 a {
   color: #000;
 }
 
 /* -- Recapitulatif produits -- */
-/* line 417, styles.scss */
+/* line 426, styles.scss */
 #filtre_produit {
   margin: 20px 10px;
 }
 
-/* line 418, styles.scss */
+/* line 427, styles.scss */
 #filtre_produit .input select {
   float: left;
 }
 
-/* line 420, styles.scss */
+/* line 429, styles.scss */
 .toggle {
   display: inline-block;
   background: url("images/white-arrow.png") 1px -63px no-repeat;
@@ -583,7 +591,7 @@ aside#image-accessoires img {
   height: 18px;
 }
 
-/* line 426, styles.scss */
+/* line 435, styles.scss */
 #show_filter .active_arrow {
   background-position: 0 -15px;
 }
@@ -591,26 +599,26 @@ aside#image-accessoires img {
 /* ---------------------------------------
 				Fiche produits
 ------------------------------------------ */
-/* line 431, styles.scss */
+/* line 440, styles.scss */
 .fiche h4 {
   margin-left: 0;
 }
 
-/* line 432, styles.scss */
+/* line 441, styles.scss */
 .produit-gauche {
   width: 300px;
   float: left;
   padding: 0;
 }
 
-/* line 433, styles.scss */
+/* line 442, styles.scss */
 .produit-droit {
   width: 225px;
   float: left;
   padding-left: 25px;
 }
 
-/* line 434, styles.scss */
+/* line 443, styles.scss */
 .fiche .photos {
   border: 3px solid #DBE5E8;
   -webkit-border-radius: 0px;
@@ -623,7 +631,7 @@ aside#image-accessoires img {
   box-shadow: 1px 1px 14px #555555;
 }
 
-/* line 435, styles.scss */
+/* line 444, styles.scss */
 .fiche .prix {
   display: block;
   float: none;
@@ -637,7 +645,7 @@ aside#image-accessoires img {
   text-shadow: 1px 1px 2px #999;
 }
 
-/* line 436, styles.scss */
+/* line 445, styles.scss */
 .fiche .ancien-prix {
   font-weight: bold;
   text-decoration: line-through;
@@ -647,19 +655,19 @@ aside#image-accessoires img {
   font-size: 1.1em;
 }
 
-/* line 437, styles.scss */
+/* line 446, styles.scss */
 .fiche .description {
   border-bottom: 1px solid #D9D9D9;
   padding-bottom: 11px;
   margin-bottom: 7px;
 }
 
-/* line 438, styles.scss */
+/* line 447, styles.scss */
 .fiche .description li {
   line-height: 18px;
 }
 
-/* line 439, styles.scss */
+/* line 448, styles.scss */
 .fiche .titre {
   font-size: 1.2em;
   font-weight: bold;
@@ -668,20 +676,20 @@ aside#image-accessoires img {
   text-decoration: underline;
 }
 
-/* line 440, styles.scss */
+/* line 449, styles.scss */
 .fiche .promo {
   border-bottom: 1px solid #D9D9D9;
   padding: 3px 0 20px;
 }
 
-/* line 441, styles.scss */
+/* line 450, styles.scss */
 .fiche .miniatures, .fiche .miniatures li {
   background: none;
   padding: 0;
   margin: 0;
 }
 
-/* line 442, styles.scss */
+/* line 451, styles.scss */
 .fiche .miniatures li a {
   float: left;
   border: 2px solid #D9D9D9;
@@ -697,7 +705,7 @@ aside#image-accessoires img {
   box-shadow: 1px 1px 14px #555555;
 }
 
-/* line 443, styles.scss */
+/* line 452, styles.scss */
 .fiche .miniatures li a:hover {
   border-color: #AA4673;
   /*+opacity:80%;*/
@@ -707,17 +715,17 @@ aside#image-accessoires img {
   opacity: 0.8;
 }
 
-/* line 444, styles.scss */
+/* line 453, styles.scss */
 .fiche .tags a {
   text-decoration: underline;
 }
 
-/* line 445, styles.scss */
+/* line 454, styles.scss */
 .produit-partage a {
   text-decoration: none;
 }
 
-/* line 446, styles.scss */
+/* line 455, styles.scss */
 .produit-partage a:hover {
   opacity: 0.7;
   -moz-opacity: 0.7;
@@ -725,12 +733,12 @@ aside#image-accessoires img {
 }
 
 /* gallerie */
-/* line 450, styles.scss */
+/* line 459, styles.scss */
 .gallerie {
   overflow: none;
 }
 
-/* line 451, styles.scss */
+/* line 460, styles.scss */
 .gallerie h4 {
   line-height: 18px;
   padding: 20px 0 5px;
@@ -744,34 +752,34 @@ aside#image-accessoires img {
   text-shadow: 1px 1px 2px #999;
 }
 
-/* line 452, styles.scss */
+/* line 461, styles.scss */
 .gallerie h4 a {
   text-decoration: none;
 }
 
-/* line 453, styles.scss */
+/* line 462, styles.scss */
 .gallerie a {
   color: #444;
 }
 
-/* line 454, styles.scss */
+/* line 463, styles.scss */
 .gallerie a:hover {
   color: #AA4673;
   text-decoration: underline;
 }
 
-/* line 455, styles.scss */
+/* line 464, styles.scss */
 .gallerie p {
   padding: 5px 0;
 }
 
-/* line 456, styles.scss */
+/* line 465, styles.scss */
 .gallerie .blanc {
   background: #FFF;
   margin: 20px;
 }
 
-/* line 457, styles.scss */
+/* line 466, styles.scss */
 .gallerie .blanc h4 {
   font: bold 2.1em 'riesling';
 }
@@ -779,20 +787,20 @@ aside#image-accessoires img {
 /* ---------------------------------------
 				Partenariats
 ------------------------------------------ */
-/* line 463, styles.scss */
+/* line 472, styles.scss */
 section#partenaires {
   color: #0F0F0F;
   margin: 0 auto;
   width: 970px;
 }
 
-/* line 464, styles.scss */
+/* line 473, styles.scss */
 ul.ligne1, ul.ligne2 {
   margin: 20px 0;
   display: inline-block;
 }
 
-/* line 465, styles.scss */
+/* line 474, styles.scss */
 ul.ligne1 li, ul.ligne2 li {
   display: inline-block;
   vertical-align: top;
@@ -802,35 +810,35 @@ ul.ligne1 li, ul.ligne2 li {
   text-align: center;
 }
 
-/* line 466, styles.scss */
+/* line 475, styles.scss */
 ul.ligne1 li:first-child, ul.ligne2 li:first-child {
   border: 0;
 }
 
-/* line 467, styles.scss */
+/* line 476, styles.scss */
 ul.ligne1 li ul li, ul.ligne2 li ul li {
   padding: 0;
   margin: 3px 0;
   border: none;
 }
 
-/* line 468, styles.scss */
+/* line 477, styles.scss */
 ul.ligne1 li h3, ul.ligne2 li h3 {
   margin-bottom: 15px;
   font: bold 2.2em 'riesling';
 }
 
-/* line 469, styles.scss */
+/* line 478, styles.scss */
 ul.ligne1 ul li.site_web, ul.ligne2 ul li.site_web {
   padding-top: 15px;
 }
 
-/* line 470, styles.scss */
+/* line 479, styles.scss */
 ul.ligne2 li#dernier {
   border-right: 1px solid #E3E3E3;
 }
 
-/* line 471, styles.scss */
+/* line 480, styles.scss */
 ul.ligne2 li#avant_dernier {
   border: none;
 }
@@ -838,7 +846,7 @@ ul.ligne2 li#avant_dernier {
 /* ---------------------------------------
 				Contact
 ------------------------------------------ */
-/* line 477, styles.scss */
+/* line 486, styles.scss */
 #formContact {
   position: relative;
   display: inline-block;
@@ -847,7 +855,7 @@ ul.ligne2 li#avant_dernier {
   padding: 0;
 }
 
-/* line 484, styles.scss */
+/* line 493, styles.scss */
 #formContact legend {
   font: normal 4em 'riesling';
   text-align: left;
@@ -855,20 +863,20 @@ ul.ligne2 li#avant_dernier {
   padding: 40px 0 40px 30px;
 }
 
-/* line 490, styles.scss */
+/* line 499, styles.scss */
 #formContact .mariee {
   visibility: hidden;
   position: absolute;
 }
 
-/* line 494, styles.scss */
+/* line 503, styles.scss */
 form.formulaire {
   width: 360px;
   display: inline-block;
   vertical-align: top;
 }
 
-/* line 499, styles.scss */
+/* line 508, styles.scss */
 form input[type=text], form textarea {
   border: none;
   background: #fff;
@@ -886,7 +894,7 @@ form input[type=text], form textarea {
   box-shadow: inset 0px 0px 10px 0px #222;
 }
 
-/* line 515, styles.scss */
+/* line 524, styles.scss */
 form textarea {
   font-size: 1.3em;
   width: 330px;
@@ -897,17 +905,17 @@ form textarea {
   padding-top: 10px;
 }
 
-/* line 524, styles.scss */
+/* line 533, styles.scss */
 fieldset {
   border: 0 none;
 }
 
-/* line 525, styles.scss */
+/* line 534, styles.scss */
 legend {
   display: hidden;
 }
 
-/* line 527, styles.scss */
+/* line 536, styles.scss */
 .envoyer input {
   margin: 10px 0 0 230px;
   width: 120px;
@@ -918,7 +926,7 @@ legend {
   background: url("images/bouton_submit.png") top left no-repeat;
 }
 
-/* line 536, styles.scss */
+/* line 545, styles.scss */
 .envoyer:hover {
   opacity: 0.8;
   -moz-opacity: 0.8;
@@ -926,26 +934,26 @@ legend {
 }
 
 /*adresse-sociaux*/
-/* line 542, styles.scss */
+/* line 551, styles.scss */
 #reseauxSociaux {
   color: #878383;
   font-size: 1.3em;
   margin-left: 15px;
 }
 
-/* line 547, styles.scss */
+/* line 556, styles.scss */
 #reseauxSociaux a {
   display: inline-block;
   vertical-align: top;
   margin: 10px 40px 0 0;
 }
 
-/* line 552, styles.scss */
+/* line 561, styles.scss */
 #reseauxSociaux a img {
   width: 150px;
 }
 
-/* line 554, styles.scss */
+/* line 563, styles.scss */
 #reseauxSociaux a:hover img {
   opacity: 0.8;
   -moz-opacity: 0.8;
@@ -953,7 +961,7 @@ legend {
 }
 
 /* -- planGoogle -- */
-/* line 562, styles.scss */
+/* line 571, styles.scss */
 #plan_google {
   display: inline-block;
   vertical-align: top;
@@ -974,12 +982,12 @@ legend {
 /* ---------------------------------------
 				Guestbook
 ------------------------------------------ */
-/* line 575, styles.scss */
+/* line 584, styles.scss */
 .mariee {
   visibility: hidden;
 }
 
-/* line 576, styles.scss */
+/* line 585, styles.scss */
 .comment {
   border: 1px solid #999;
   width: 600px;
@@ -989,55 +997,82 @@ legend {
   border: 1px solid red;
 }
 
-/* line 577, styles.scss */
+/* line 586, styles.scss */
 .comment .comment-title {
   background: #ccc;
   padding: 5px;
   border-bottom: 1px solid #999;
 }
 
-/* line 578, styles.scss */
+/* line 587, styles.scss */
 .comment .comment-title .action {
   float: right;
 }
 
-/* line 579, styles.scss */
+/* line 588, styles.scss */
 .comment .comment-content {
   padding: 5px;
 }
 
-/* line 581, styles.scss */
-#GuestbookIndexForm {
-  width: 900px;
-  margin: 20px 20px 20px;
+/* line 590, styles.scss */
+#guestbook {
+  border-top: 1px solid #D9D9D9;
+  padding-top: 10px;
 }
 
-/* line 585, styles.scss */
-#GuestbookIndexForm label {
+/* line 592, styles.scss */
+#guestbook_form {
+  padding: 10px 20px;
+  background-color: #fff;
+  border: none;
   display: inline-block;
+  width: 400px;
+  margin: 20px 10px 30px 0;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  border-radius: 15px;
+  -webkit-box-shadow: 2px 4px 15px #222222;
+  -moz-box-shadow: 2px 4px 15px #222222;
+  box-shadow: 2px 4px 15px #222222;
+}
+
+/* line 601, styles.scss */
+#guestbook_form label {
+  display: inline-block;
+  vertical-align: top;
   vertical-align: top;
   width: 100px;
 }
 
-/* line 590, styles.scss */
-#GuestbookIndexForm input[type=text] {
+/* line 607, styles.scss */
+#guestbook_form input[type=text] {
   width: 180px;
 }
 
-/* line 592, styles.scss */
-#GuestbookIndexForm .submit {
+/* line 609, styles.scss */
+#guestbook_form .submit {
   display: inline-block;
   margin: 20px 0 0 20px;
 }
 
-/* line 596, styles.scss */
+/* line 613, styles.scss */
 form .placeholder {
   margin-left: 0;
 }
 
-/* line 597, styles.scss */
+/* line 614, styles.scss */
 form .placeholder label {
   position: absolute;
   line-height: 36px;
   margin-left: 15px;
+}
+
+/* line 616, styles.scss */
+#guestbook_image {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 100px;
+  border: 1px solid red;
 }
